# thesis_tester_tutorial

./: status.json
.config/: archs-gcc-baremetal-qemu.frag  config.json  vars.json
.config/parallel/: .site.exp.erb  Makefile.in  configure  configure.ac  site.exp.erb
.config/parallel/m2/: config-make  config-make.erb
.config/scripts/: agregator.rb  compare.rb  version_check.rb  versions.rb
.config/scripts/lib/: rules.rb  table.rb
